tests/logs/test_log_1784745195.txt
Arca Test Execution & Runtime Stdout Log
Timestamp: Wed Jul 22 18:33:15 UTC 2026
Unix Timestamp: 1784745195
=========================================
-----------------------------------------
Test Name: arithmetic.test.arca
File: tests/features/arithmetic.test.arca
Duration: 1s
Runtime Stdout:
build/output.c:22:1: error: expected identifier or '('
   22 | = arca_result_unwrap(v1);
      | ^
build/output.c:23:3: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
   23 |   v4 = v5;
      |   ^
      |   int
build/output.c:23:8: error: use of undeclared identifier 'v5'
   23 |   v4 = v5;
      |        ^
build/output.c:24:3: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
   24 |   arca_print_int(v5);
      |   ^
      |   int
build/output.c:24:18: error: a parameter list without types is only allowed in a function definition
   24 |   arca_print_int(v5);
      |                  ^
build/output.c:25:11: error: expected parameter declarator
   25 |   putchar('\n');
      |           ^
build/output.c:25:11: error: expected ')'
build/output.c:25:10: note: to match this '('
   25 |   putchar('\n');
      |          ^
build/output.c:25:3: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
   25 |   putchar('\n');
      |   ^
      |   int
build/output.c:25:3: warning: a function declaration without a prototype is deprecated in all versions of C and is treated as a zero-parameter prototype in C23, conflicting with a previous declaration [-Wdeprecated-non-prototype]
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/_stdio.h:266:6: note: conflicting prototype is here
  266 | int      putchar(int);
      |          ^
build/output.c:26:3: error: expected identifier or '('
   26 |   return;
      |   ^
build/output.c:27:1: error: extraneous closing brace ('}')
   27 | }
      | ^
build/output.c:29:5: error: redefinition of 'main'
   29 | int main(int argc, char** argv) {
      |     ^
build/output.c:18:5: note: previous definition is here
   18 | int main(int argc, char** argv) {
      |     ^
1 warning and 11 errors generated.
[arca] C compilation failed with code: exit status: 1
Result: FAIL
-----------------------------------------
Test Name: borrow.test.arca
File: tests/features/borrow.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/borrow.test.arca
123
Result: PASS
-----------------------------------------
Test Name: channel.test.arca
File: tests/features/channel.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/channel.test.arca
42
99
Result: PASS
-----------------------------------------
Test Name: comparison.test.arca
File: tests/features/comparison.test.arca
Duration: 2s
Runtime Stdout:
[arca] Running: tests/features/comparison.test.arca
/usr/bin
Result: PASS
-----------------------------------------
Test Name: defer.test.arca
File: tests/features/defer.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/defer.test.arca
1
2
Result: PASS
-----------------------------------------
Test Name: enum.test.arca
File: tests/features/enum.test.arca
Duration: 2s
Runtime Stdout:
[arca] Running: tests/features/enum.test.arca
10
20
Result: PASS
-----------------------------------------
Test Name: env.test.arca
File: tests/features/env.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/env.test.arca
1
42
Result: PASS
-----------------------------------------
Test Name: env_full.test.arca
File: tests/features/env_full.test.arca
Duration: 1s
Runtime Stdout:
build/output.c:15:6: error: incompatible integer to pointer conversion assigning to 'const char *' from 'int64_t' (aka 'long long') [-Wint-conversion]
   15 |   v3 = (int64_t)arca_current_dir();
      |      ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
[arca] C compilation failed with code: exit status: 1
Result: FAIL
-----------------------------------------
Test Name: extend.test.arca
File: tests/features/extend.test.arca
Duration: 1s
Runtime Stdout:
build/output.c:32:1: error: expected identifier or '('
   32 | 4_t v0;
      | ^
build/output.c:33:22: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
   33 |   arca_channel_send((void*)arg, (int64_t)100);
      |                      ^
      |                     int
build/output.c:33:28: error: expected ')'
   33 |   arca_channel_send((void*)arg, (int64_t)100);
      |                            ^
build/output.c:33:20: note: to match this '('
   33 |   arca_channel_send((void*)arg, (int64_t)100);
      |                    ^
build/output.c:33:3: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
   33 |   arca_channel_send((void*)arg, (int64_t)100);
      |   ^
      |   int
build/output.c:33:3: error: conflicting types for 'arca_channel_send'
library/runtime/arca_runtime.h:233:6: note: previous declaration is here
  233 | void arca_channel_send(void* channel, int64_t val);
      |      ^
build/output.c:34:3: error: expected identifier or '('
   34 |   return;
      |   ^
build/output.c:35:1: error: extraneous closing brace ('}')
   35 | }
      | ^
build/output.c:37:5: error: redefinition of 'main'
   37 | int main(int argc, char** argv) {
      |     ^
build/output.c:28:5: note: previous definition is here
   28 | int main(int argc, char** argv) {
      |     ^
8 errors generated.
[arca] C compilation failed with code: exit status: 1
Result: FAIL
-----------------------------------------
Test Name: for_loop.test.arca
File: tests/features/for_loop.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/for_loop.test.arca
10
Result: PASS
-----------------------------------------
Test Name: foreach.test.arca
File: tests/features/foreach.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/foreach.test.arca
6
Result: PASS
-----------------------------------------
Test Name: fs.test.arca
File: tests/features/fs.test.arca
Duration: 2s
Runtime Stdout:
[arca] Running: tests/features/fs.test.arca
1
6
Result: PASS
-----------------------------------------
Test Name: fs_full.test.arca
File: tests/features/fs_full.test.arca
Duration: 1s
Runtime Stdout:
build/output.c:21:6: error: incompatible integer to pointer conversion assigning to 'const char *' from 'int64_t' (aka 'long long') [-Wint-conversion]
   21 |   v5 = (int64_t)arca_fs_metadata((const char*)"/tmp");
      |      ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
[arca] C compilation failed with code: exit status: 1
Result: FAIL
-----------------------------------------
Test Name: functions.test.arca
File: tests/features/functions.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/functions.test.arca
55
Result: PASS
-----------------------------------------
Test Name: if_else.test.arca
File: tests/features/if_else.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/if_else.test.arca
20
Result: PASS
-----------------------------------------
Test Name: impl.test.arca
File: tests/features/impl.test.arca
Duration: 2s
Runtime Stdout:
[arca] Running: tests/features/impl.test.arca
42
Result: PASS
-----------------------------------------
Test Name: io.test.arca
File: tests/features/io.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/io.test.arca
42
Result: PASS
-----------------------------------------
Test Name: json.test.arca
File: tests/features/json.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/json.test.arca
10
Result: PASS
-----------------------------------------
Test Name: loop.test.arca
File: tests/features/loop.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/loop.test.arca
6
Result: PASS
-----------------------------------------
Test Name: match.test.arca
File: tests/features/match.test.arca
Duration: 1s
Runtime Stdout:
build/output.c:18:2: error: expected identifier or '('
   18 |  goto bb_4;
      |  ^
build/output.c:19:3: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
   19 |   bb_2: ;
      |   ^
      |   int
build/output.c:19:7: error: expected ';' after top level declarator
   19 |   bb_2: ;
      |       ^
      |       ;
build/output.c:20:3: error: expected identifier or '('
   20 |   goto bb_3;
      |   ^
build/output.c:21:3: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
   21 |   bb_3: ;
      |   ^
      |   int
build/output.c:21:7: error: expected ';' after top level declarator
   21 |   bb_3: ;
      |       ^
      |       ;
build/output.c:22:3: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
   22 |   v2 = 200;
      |   ^
      |   int
build/output.c:23:3: error: expected identifier or '('
   23 |   goto bb_4;
      |   ^
build/output.c:24:3: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
   24 |   bb_4: ;
      |   ^
      |   int
build/output.c:24:7: error: expected ';' after top level declarator
   24 |   bb_4: ;
      |       ^
      |       ;
build/output.c:25:3: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
   25 |   v4 = v2;
      |   ^
      |   int
build/output.c:25:8: error: initializer element is not a compile-time constant
   25 |   v4 = v2;
      |        ^~
build/output.c:26:3: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
   26 |   v1 = v4;
      |   ^
      |   int
build/output.c:26:8: error: initializer element is not a compile-time constant
   26 |   v1 = v4;
      |        ^~
build/output.c:27:3: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
   27 |   arca_print_int(v4);
      |   ^
      |   int
build/output.c:27:18: error: a parameter list without types is only allowed in a function definition
   27 |   arca_print_int(v4);
      |                  ^
build/output.c:28:11: error: expected parameter declarator
   28 |   putchar('\n');
      |           ^
build/output.c:28:11: error: expected ')'
build/output.c:28:10: note: to match this '('
   28 |   putchar('\n');
      |          ^
build/output.c:28:3: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
   28 |   putchar('\n');
      |   ^
      |   int
build/output.c:28:3: warning: a function declaration without a prototype is deprecated in all versions of C and is treated as a zero-parameter prototype in C23, conflicting with a previous declaration [-Wdeprecated-non-prototype]
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/_stdio.h:266:6: note: conflicting prototype is here
  266 | int      putchar(int);
      |          ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
1 warning and 20 errors generated.
[arca] C compilation failed with code: exit status: 1
Result: FAIL
-----------------------------------------
Test Name: match_payload.test.arca
File: tests/features/match_payload.test.arca
Duration: 2s
Runtime Stdout:
[arca] Running: tests/features/match_payload.test.arca
10
20
Result: PASS
-----------------------------------------
Test Name: math.test.arca
File: tests/features/math.test.arca
Duration: 1s
Runtime Stdout:
build/output.c:23:17: warning: using integer absolute value function 'llabs' when argument is of floating point type [-Wabsolute-value]
   23 |   v4 = (int64_t)llabs((double)v3);
      |                 ^
build/output.c:23:17: note: use function 'fabs' instead
   23 |   v4 = (int64_t)llabs((double)v3);
      |                 ^~~~~
      |                 fabs
1 warning generated.
[arca] Running: tests/features/math.test.arca
3
0
1
99
16807
Result: PASS
-----------------------------------------
Test Name: method.test.arca
File: tests/features/method.test.arca
Duration: 2s
Runtime Stdout:
[arca] Running: tests/features/method.test.arca
hello Alice
Result: PASS
-----------------------------------------
Test Name: move.test.arca
File: tests/features/move.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/move.test.arca
99
Result: PASS
-----------------------------------------
Test Name: none.test.arca
File: tests/features/none.test.arca
Duration: 2s
Runtime Stdout:
[arca] Running: tests/features/none.test.arca
10
Result: PASS
-----------------------------------------
Test Name: option.test.arca
File: tests/features/option.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/option.test.arca
1
99
Result: PASS
-----------------------------------------
Test Name: parse_int.test.arca
File: tests/features/parse_int.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/parse_int.test.arca
0
-1
Result: PASS
-----------------------------------------
Test Name: path.test.arca
File: tests/features/path.test.arca
Duration: 2s
Runtime Stdout:
build/output.c:11:8: error: call to undeclared function 'arca_path_path_extension'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   11 |   v0 = arca_path_path_extension((const char*)"/tmp/file.txt");
      |        ^
build/output.c:11:8: note: did you mean 'arca_path_extension'?
library/runtime/arca_runtime.h:113:13: note: 'arca_path_extension' declared here
  113 | const char* arca_path_extension(const char* path);
      |             ^
build/output.c:14:8: error: call to undeclared function 'arca_path_path_filename'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   14 |   v1 = arca_path_path_filename((const char*)"/tmp/file.txt");
      |        ^
build/output.c:14:8: note: did you mean 'arca_path_filename'?
library/runtime/arca_runtime.h:114:13: note: 'arca_path_filename' declared here
  114 | const char* arca_path_filename(const char* path);
      |             ^
build/output.c:17:8: error: call to undeclared function 'arca_path_path_parent'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   17 |   v2 = arca_path_path_parent((const char*)"/tmp/file.txt");
      |        ^
build/output.c:17:8: note: did you mean 'arca_path_parent'?
library/runtime/arca_runtime.h:115:13: note: 'arca_path_parent' declared here
  115 | const char* arca_path_parent(const char* path);
      |             ^
build/output.c:20:6: error: incompatible pointer to integer conversion assigning to 'int64_t' (aka 'long long') from 'const char *' [-Wint-conversion]
   20 |   v3 = arca_path_join((const char*)"/tmp", (const char*)"notes.txt");
      |      ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
4 errors generated.
[arca] C compilation failed with code: exit status: 1
Result: FAIL
-----------------------------------------
Test Name: path_full.test.arca
File: tests/features/path_full.test.arca
Duration: 0s
Runtime Stdout:

Result: PASS
-----------------------------------------
Test Name: process.test.arca
File: tests/features/process.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/process.test.arca
55
Result: PASS
-----------------------------------------
Test Name: ref_ptr.test.arca
File: tests/features/ref_ptr.test.arca
Duration: 2s
Runtime Stdout:
[arca] Running: tests/features/ref_ptr.test.arca
50
Result: PASS
-----------------------------------------
Test Name: result.test.arca
File: tests/features/result.test.arca
Duration: 3s
Runtime Stdout:
warning: unused variable: `entry_label`
   --> crates/arca-backend/src/lib.rs:434:13
    |
434 |         let entry_label = block_labels.get(&func.entry_block).cloned().unwrap_or_default();
    |             ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_entry_label`
    |
    = note: `#[warn(unused_variables)]` on by default

[arca] Running: tests/features/result.test.arca
42
Result: PASS
-----------------------------------------
Test Name: sleep.test.arca
File: tests/features/sleep.test.arca
Duration: 1s
Runtime Stdout:
warning: unused variable: `entry_label`
   --> crates/arca-backend/src/lib.rs:434:13
    |
434 |         let entry_label = block_labels.get(&func.entry_block).cloned().unwrap_or_default();
    |             ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_entry_label`
    |
    = note: `#[warn(unused_variables)]` on by default

[arca] Running: tests/features/sleep.test.arca
0
Result: PASS
-----------------------------------------
Test Name: spawn.test.arca
File: tests/features/spawn.test.arca
Duration: 2s
Runtime Stdout:
warning: unused variable: `entry_label`
   --> crates/arca-backend/src/lib.rs:434:13
    |
434 |         let entry_label = block_labels.get(&func.entry_block).cloned().unwrap_or_default();
    |             ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_entry_label`
    |
    = note: `#[warn(unused_variables)]` on by default

build/output.c:9:6: error: incompatible integer to pointer conversion assigning to 'const char *' from 'int64_t' (aka 'long long') [-Wint-conversion]
    9 |   v1 = (int64_t)arca_json_stringify((const char*)"hello");
      |      ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
build/output.c:20:2: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
   20 | (intptr_t)v1);
      |  ^
      | int
build/output.c:20:2: error: redefinition of 'intptr_t' as different kind of symbol
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/sys/_types/_intptr_t.h:32:33: note: previous definition is here
   32 | typedef __darwin_intptr_t       intptr_t;
      |                                 ^
build/output.c:20:11: error: expected ';' after top level declarator
   20 | (intptr_t)v1);
      |           ^
      |           ;
build/output.c:21:3: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
   21 |   v4 = arca_channel_recv((void*)v1);
      |   ^
      |   int
build/output.c:21:33: error: use of undeclared identifier 'v1'
   21 |   v4 = arca_channel_recv((void*)v1);
      |                                 ^
build/output.c:22:3: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
   22 |   v3 = v4;
      |   ^
      |   int
build/output.c:22:8: error: initializer element is not a compile-time constant
   22 |   v3 = v4;
      |        ^~
build/output.c:23:3: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
   23 |   arca_print_int(v4);
      |   ^
      |   int
build/output.c:23:18: error: a parameter list without types is only allowed in a function definition
   23 |   arca_print_int(v4);
      |                  ^
build/output.c:24:11: error: expected parameter declarator
   24 |   putchar('\n');
      |           ^
build/output.c:24:11: error: expected ')'
build/output.c:24:10: note: to match this '('
   24 |   putchar('\n');
      |          ^
build/output.c:24:3: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
   24 |   putchar('\n');
      |   ^
      |   int
build/output.c:24:3: warning: a function declaration without a prototype is deprecated in all versions of C and is treated as a zero-parameter prototype in C23, conflicting with a previous declaration [-Wdeprecated-non-prototype]
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/_stdio.h:266:6: note: conflicting prototype is here
  266 | int      putchar(int);
      |          ^
build/output.c:25:3: error: expected identifier or '('
   25 |   return;
      |   ^
build/output.c:26:1: error: extraneous closing brace ('}')
   26 | }
      | ^
build/output.c:34:5: error: redefinition of 'main'
   34 | int main(int argc, char** argv) {
      |     ^
build/output.c:16:5: note: previous definition is here
   16 | int main(int argc, char** argv) {
      |     ^
1 warning and 16 errors generated.
[arca] C compilation failed with code: exit status: 1
Result: FAIL
-----------------------------------------
Test Name: string.test.arca
File: tests/features/string.test.arca
Duration: 1s
Runtime Stdout:
warning: unused variable: `entry_label`
   --> crates/arca-backend/src/lib.rs:434:13
    |
434 |         let entry_label = block_labels.get(&func.entry_block).cloned().unwrap_or_default();
    |             ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_entry_label`
    |
    = note: `#[warn(unused_variables)]` on by default

[arca] Running: tests/features/string.test.arca
hello  
1
1
Result: PASS
-----------------------------------------
Test Name: string_slice.test.arca
File: tests/features/string_slice.test.arca
Duration: 3s
Runtime Stdout:
[arca] Running: tests/features/string_slice.test.arca
1
Result: PASS
-----------------------------------------
Test Name: strings.test.arca
File: tests/features/strings.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/strings.test.arca
42
Result: PASS
-----------------------------------------
Test Name: struct.test.arca
File: tests/features/struct.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/struct.test.arca
1
24
Result: PASS
-----------------------------------------
Test Name: throw.test.arca
File: tests/features/throw.test.arca
Duration: 2s
Runtime Stdout:
[arca] Running: tests/features/throw.test.arca
1
Result: PASS
-----------------------------------------
Test Name: to_string.test.arca
File: tests/features/to_string.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/to_string.test.arca
42
99
Result: PASS
-----------------------------------------
Test Name: try_catch.test.arca
File: tests/features/try_catch.test.arca
Duration: 2s
Runtime Stdout:
build/output.c:18:1: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
   18 | rca_print_int(v1);
      | ^
      | int
build/output.c:18:15: error: a parameter list without types is only allowed in a function definition
   18 | rca_print_int(v1);
      |               ^
build/output.c:19:11: error: expected parameter declarator
   19 |   putchar('\n');
      |           ^
build/output.c:19:11: error: expected ')'
build/output.c:19:10: note: to match this '('
   19 |   putchar('\n');
      |          ^
build/output.c:19:3: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
   19 |   putchar('\n');
      |   ^
      |   int
build/output.c:19:3: warning: a function declaration without a prototype is deprecated in all versions of C and is treated as a zero-parameter prototype in C23, conflicting with a previous declaration [-Wdeprecated-non-prototype]
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/_stdio.h:266:6: note: conflicting prototype is here
  266 | int      putchar(int);
      |          ^
build/output.c:20:3: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
   20 |   v2 = 10 > 3;
      |   ^
      |   int
build/output.c:21:3: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
   21 |   arca_print_int(v2);
      |   ^
      |   int
build/output.c:21:18: error: a parameter list without types is only allowed in a function definition
   21 |   arca_print_int(v2);
      |                  ^
build/output.c:22:11: error: expected parameter declarator
   22 |   putchar('\n');
      |           ^
build/output.c:22:11: error: expected ')'
build/output.c:22:10: note: to match this '('
   22 |   putchar('\n');
      |          ^
build/output.c:22:3: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
   22 |   putchar('\n');
      |   ^
      |   int
build/output.c:23:3: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
   23 |   v3 = 10 >= 10;
      |   ^
      |   int
build/output.c:24:3: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
   24 |   arca_print_int(v3);
      |   ^
      |   int
build/output.c:24:18: error: a parameter list without types is only allowed in a function definition
   24 |   arca_print_int(v3);
      |                  ^
build/output.c:25:11: error: expected parameter declarator
   25 |   putchar('\n');
      |           ^
build/output.c:25:11: error: expected ')'
build/output.c:25:10: note: to match this '('
   25 |   putchar('\n');
      |          ^
build/output.c:25:3: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
   25 |   putchar('\n');
      |   ^
      |   int
build/output.c:26:3: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
   26 |   v4 = 2 < 7;
      |   ^
      |   int
build/output.c:27:3: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
   27 |   arca_print_int(v4);
      |   ^
      |   int
fatal error: too many errors emitted, stopping now [-ferror-limit=]
1 warning and 20 errors generated.
[arca] C compilation failed with code: exit status: 1
Result: FAIL
-----------------------------------------
Test Name: variables.test.arca
File: tests/features/variables.test.arca
Duration: 1s
Runtime Stdout:
[arca] Running: tests/features/variables.test.arca
1
99
Result: PASS
-----------------------------------------
Test Name: while_loop.test.arca
File: tests/features/while_loop.test.arca
Duration: 2s
Runtime Stdout:
[arca] Running: tests/features/while_loop.test.arca
10
20
Result: PASS
-----------------------------------------
Test Name: ai.test.arca
File: tests/std-libs/ai.test.arca
Duration: 0s
Runtime Stdout:
error: Unknown struct type 'Tensor'

error: Unknown struct type 'Dataset'

error: Unknown struct type 'Tokenizer'

error: Unknown struct type 'OpenAI'
Result: FAIL
